Fix session status z-index

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -28,6 +28,7 @@ main {
   background-color: black;
 
   .bg-image {
+    z-index: 1;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -40,6 +41,7 @@ main {
   }
 
   svg {
+    z-index: 2;
     position: absolute;
     width: 100%;
     height: 100%;
